[package]
name = "learning"
version = "0.1.0"
edition = "2024"

[lib]
name = "learning"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
oci-distribution = { version = "0.11.0" }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
serde_json = "1.0"

